updates local env

--- a/local_dev_env/Makefile
+++ b/local_dev_env/Makefile
@@ -1,10 +1,39 @@
+.PHONY: test
+test:
+	@sudo echo "$$(./get_vm_ip) tombola-local" >> /etc/hosts
+
+.PHONY: install
 install:
-	multipass launch -n tombola --cloud-init ./cloud-config.yaml --verbose --mount $$(pwd)/../:/home/dev/codebase --mount $$HOME/.ssh:/home/dev/.ssh
+	@echo
+	@echo "Generating the local env machine configuration..."
+	@cat ./cloud-config.template.yaml | sed -r "s/<authorized_keys>/$$(cat ~/.ssh/id_rsa.pub | sed -e 's/[]\/$*.^[]/\\&/g')/g" > cloud-config.yaml
+	@echo Done
+
+	@echo
+	@echo "Launching dev env virtual machine..."
+	@multipass launch -n tombola -d 10G --cloud-init ./cloud-config.yaml
+	
+	@echo
+	@echo "Updating the ssh config file..."
+	@touch -a ~/.ssh/config
+	@multipass exec -d /home/dev tombola -- ./update_host "$$(cat ~/.ssh/config)" $$(./get_vm_ip) > ~/.ssh/config
+	@echo Done
+
+	@echo
+	@echo "Cleaning files..."
+	@rm cloud-config.yaml
+	@echo Done
 
 uninstall:
 	multipass stop tombola
 	multipass delete tombola
 	multipass purge
 
+stop:
+	multipass stop tombola
+
+start:
+	multipass start tombola
+
 shell:
-	multipass exec --working-directory="/home/dev" tombola -- sudo -H -u dev zsh
+	@ssh dev@$$(./get_vm_ip)
